syntax = "proto3";

package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message BlogRequest {
    Blog blog = 1;
}

message BlogResponse {
    Blog blog = 1;
}

message BlogId {
    string blog_id = 1;
}

message ListBlogRequest {}

service BlogService {
    rpc CreateBlog(BlogRequest) returns (BlogResponse){};
    rpc ReadBlog(BlogId) returns (BlogResponse){};
    rpc UpdateBlog(BlogRequest) returns (BlogResponse){};
    rpc DeleteBlog(BlogId) returns (BlogId){};
    rpc ListBlog(ListBlogRequest) returns (stream BlogResponse){};
}